--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,32 +1,24 @@
-specVersion: 0.0.1
+specVersion: 0.0.5
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
-    name: undefined
+    name: EACAggregator
     network: mainnet
     source:
-      address: "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419"
+      address: "0x37bC7498f4FF12C19678ee8fE19d713b87F6a9e6"
       abi: EACAggregator
+      startBlock: 10606400
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - AnswerUpdated
-        - NewRound
-        - OwnershipTransferRequested
-        - OwnershipTransferred
+        - RoundData
       abis:
         - name: EACAggregator
           file: ./abis/EACAggregator.json
       eventHandlers:
         - event: AnswerUpdated(indexed int256,indexed uint256,uint256)
           handler: handleAnswerUpdated
-        - event: NewRound(indexed uint256,indexed address,uint256)
-          handler: handleNewRound
-        - event: OwnershipTransferRequested(indexed address,indexed address)
-          handler: handleOwnershipTransferRequested
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
       file: ./src/eac-aggregator.ts
