--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -3,12 +3,31 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum
+    name: EACAggregatorProxy
+    network: mainnet
+    source:
+      address: "0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419"
+      abi: EACAggregatorProxy
+      startBlock: 10606000
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - RoundData
+      abis:
+        - name: EACAggregatorProxy
+          file: ./abis/EACAggregatorProxy.json
+      callHandlers:
+        - function: confirmAggregator(address)
+          handler: handleAggregatorConfirm
+      file: ./src/eac-aggregator-proxy.ts
+templates:
+  - kind: ethereum/contract
     name: EACAggregator
     network: mainnet
     source:
-      address: "0x37bC7498f4FF12C19678ee8fE19d713b87F6a9e6"
       abi: EACAggregator
-      startBlock: 10606400
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
